remove services local registry
